frontend/src/org/components/EventForm/steps/ParticipantsStep.module.scss
@use 'styles/colors';
@use 'styles/media';

h2 {
  font-family: Arial, Helvetica, sans-serif;
  font-weight: 600;
  font-size: 1.7rem;
}

.table {
  table-layout: auto;
  width: 100%;
  margin-top: 16px;
  th,
  td {
    padding: 0.5rem;
  }
  thead {
    th {
      border-bottom: 1px solid #737373;
      text-align: left;
      svg {
        display: inline-block;
      }

      &:nth-last-child(1),
      &:nth-last-child(2) {
        text-align: center;
      }

      &::first-letter {
        text-transform: uppercase;
      }
    }
  }

  tbody {
    .highlightedRow {
      background-color: colors.$gray-100;
    }
    td {
      cursor: pointer;
      justify-content: center;

      &:nth-last-child(2),
      &:last-child {
        width: 50px;
      }
      svg {
        display: inline-block;
      }
    }
  }

  tbody tr td {
    border-bottom: 1px solid #d9d9d9;
  }
  &.verticalLine1 {
    tbody tr td:first-child {
      border-right: 1px solid #d9d9d9;
      text-align: center;
    }
  }
}

.applicationWithParticipant {
  color: colors.$gray-300;
}

.applicationAddedTag {
  color: colors.$bronto;
  font-weight: 600;
}

.participantsContainer {
  width: 100%;
  border: 2px solid rgb(240, 238, 238);
  margin: 50px auto 0;

  @include media.for-medium-desktop-up {
    width: 80%;
  }

  .ListContainer {
    padding: 40px;

    .buttonsContainer {
      display: flex;
      flex-direction: row;
      justify-content: center;
      margin-top: 16px;
      gap: 12px;

      .excelButtons {
        display: flex;
        gap: 12px;
      }
    }

    .existingParticipantContainer {
      margin-top: 12px;
    }

    .lightUp {
      animation: sampleanimation 7s;
      animation-iteration-count: 1;
    }
  }
}

.addedUserBlock {
  margin-top: 40px;
}

@keyframes sampleanimation {
  0% {
    background-color: white;
  }
  10% {
    background-color: colors.$bronto-light;
  }
  25% {
    background-color: colors.$bronto-light;
  }
  50% {
    background-color: colors.$bronto-light;
  }
  75% {
    background-color: white;
  }
}

.oneCellRow {
  border-left: 0px !important;
  border-right: 0px;
  text-align: center !important;

  td {
    text-align: center !important;
  }
}

.iconHead {
  width: 18px;
  path {
    fill: black;
  }
}

.centeredTableBlock {
  margin: 0 auto;
  color: black;
}

.addParticipantModal {
  z-index: 10;
}

